Fix some spacing

--- a/css/queries.css
+++ b/css/queries.css
@@ -291,6 +291,12 @@
 
 }
 
+@media screen and (max-width: 767px){
+    .hero .backim {
+      width: 100%;
+    } 
+}
+
 @media screen and (max-width: 480px) {
     .hero .hero-content {
         padding-top: 110%;
@@ -352,10 +358,6 @@
     .down-arrow {
         display: none;
     }
-
-    .backim {
-      width: 100%;
-    } 
 }
 
 @media screen and (max-width: 320px) {
